Fix collections spacing

--- a/client/src/components/pages/Collections.css
+++ b/client/src/components/pages/Collections.css
@@ -14,6 +14,12 @@
   justify-content: space-around;
 }
 
+.collections-footer {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  margin-left: 0px;
+}
+
 .collectionList-container {
   display: flex;
   flex-direction: column;
@@ -79,6 +85,10 @@
   transition: all 0.5s;
 }
 
+/* .editor-section {
+  width: 55vw;
+} */
+
 .editor-btn:hover,
 .createNew-btn:hover {
   box-shadow: 0 0 5px var(--accent);
@@ -101,7 +111,7 @@
 }
 
 .collections-editor {
-  width: 75%;
+  width: 60vw;
   padding: 16px;
   word-wrap: break-word;
   overflow: scroll;
@@ -118,12 +128,12 @@
   border: 3px solid var(--bujo-body);
 }
 
-.collections-footer {
+/* .collections-footer {
   padding: 16px 10px 16px 0px;
   right: 15%;
   margin-top: 4px !important;
   margin-right: -40px !important;
-}
+} */
 
 .editor-btn {
   padding: 5px 10px;
