--- a/client/src/components/pages/Daily.css
+++ b/client/src/components/pages/Daily.css
@@ -7,7 +7,6 @@
 
 .journal-container {
   display: flex;
-  justify-content: space-between;
 }
 
 .widget-container {
